[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydivert"
dynamic = ["version"]
description = "Python binding to windivert driver"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPLv3" }
keywords = ["windivert", "network", "tcp/ip"]
authors = [
    { name = "Fabio Falcinelli", email = "fabio.falcinelli@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Operating System :: Microsoft :: Windows :: Windows Vista",
    "Operating System :: Microsoft :: Windows :: Windows Server 2008",
    "Operating System :: Microsoft :: Windows :: Windows 7",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
dependencies = []

[project.optional-dependencies]
test = [
    "mock>=1.0.1",
    "hypothesis>=3.5.3",
    "pytest>=3.0.3",
    "pytest-cov>=2.2.1",
    "pytest-timeout>=1.0.0, <2",
    "pytest-faulthandler>=1.3.0, <2",
    "codecov>=2.0.5",
    "wheel>=0.29",
]
docs = [
    "mkdocs>=1.5.0",
    "mkdocs-material>=9.4.0",
    "mkdocstrings[python]>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/ffalcinelli/pydivert"
Repository = "https://github.com/ffalcinelli/pydivert.git"

[tool.hatch.version]
path = "pydivert/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "pydivert",
    "AUTHORS",
    "CHANGELOG",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["pydivert"]

[tool.pytest.ini_options]
testpaths = ["pydivert"]
addopts = "--capture=no --color=yes"
timeout = 20
