[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pydivert"
dynamic = ["version"]
description = "Cross-platform network packet capture and injection library for Python"
readme = "README.md"
requires-python = ">=3.10"
license = "LGPL-3.0-or-later OR GPL-2.0-or-later"
license-files = ["LICENSE*", "AUTHORS"]
keywords = ["windivert", "network", "tcp/ip", "linux", "bsd", "macos", "firewall"]
authors = [
    { name = "Fabio Falcinelli", email = "fabio.falcinelli@gmail.com" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Win32 (MS Windows)",
    "Environment :: MacOS X",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Telecommunications Industry",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Operating System :: POSIX :: BSD :: FreeBSD",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking :: Firewalls",
    "Topic :: System :: Networking :: Monitoring",
    "Topic :: Utilities",
]
dependencies = [
    "lark",
]

[project.optional-dependencies]
test = [
    "mock>=1.0.1",
    "hypothesis>=3.5.3",
    "pytest>=7.0.0",
    "pytest-asyncio",
    "pytest-cov>=2.2.1",
    "pytest-timeout>=2.1.0",
    "codecov>=2.0.5",
    "wheel>=0.29",
    "setuptools",
    "scapy>=2.5.0",
    "cryptography",
    "cffi",
]
docs = [
    "pdoc>=14.0.0",
]
linux = [
    "NetFilterQueue; sys_platform == 'linux'",
]
lint = [
    "ruff>=0.1.0",
]
typecheck = [
    "ty",
    "pytest>=7.0.0",
    "hypothesis",
    "scapy",
]

[project.urls]
Homepage = "https://github.com/ffalcinelli/pydivert"
Repository = "https://github.com/ffalcinelli/pydivert.git"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["pydivert"]

[tool.ty.environment]
python-platform = "win32"

[tool.hatch.version]
path = "pydivert/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "pydivert",
    "AUTHORS",
    "CHANGELOG",
    "LICENSE",
    "README.md",
]

[tool.hatch.build.targets.wheel]
packages = ["pydivert"]

[tool.pytest.ini_options]
testpaths = ["pydivert"]
addopts = "--capture=no --color=yes --ignore=pydivert/tests/test_driver_management.py"
timeout = 60
asyncio_mode = "auto"

[tool.coverage.run]
source = ["pydivert"]
relative_files = true
omit = [
    "pydivert/tests/*",
    "pydivert/tests/**",
    "pydivert/tests/",
]

[tool.coverage.paths]
source = [
    "pydivert",
    "C:/pydivert/pydivert",
    "/home/vagrant/pydivert/pydivert",
]

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = []
